--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Header -->
   <header class="fixed top-0 w-full bg-white shadow z-50">
     <div class="container mx-auto flex items-center justify-between py-4 px-6">
-      <img src="assets/img/Lipaspot Logo.png" alt="LipaSpot Logo" class="h-10">
+      <img src="assets/img/Lipaspot_Logo.png" alt="LipaSpot Logo" class="h-10">
       <nav class="hidden md:flex space-x-6">
         <a href="#how" class="hover:text-[#114781]">How It Works</a>
         <a href="#features" class="hover:text-[#114781]">Features</a>
@@ -239,7 +239,7 @@
 <footer class="footer">
   <div class="footer-container">
     <div class="footer-logo">
-      <img src="assets/img/Lipaspot Logo.png" alt="LipaSpot Logo" />
+      <img src="assets/img/Lipaspot_Logo.png" alt="LipaSpot Logo" />
       <p> Enabling Digital Payments.</p>
     </div>
 
